Authelia/authelia.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:latest
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config/configuration.yml
              subPath: configuration.yml
            - name: config
              mountPath: /config/authelia-users-database.yml
              subPath: authelia-users-database.yml
      volumes:
        - name: config
          configMap:
            name: authelia-config
            items:
              - key: configuration.yml
                path: configuration.yml
        - name: config
          configMap:
            name: authelia-users-database
            items:
              - key: users_database.yml
                path: users_database.yml
