Authelia/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:latest
          ports:
            - containerPort: 9091
            volumeMounts:
            - name: config
              mountPath: /etc/authelia
            - name: users-db
              mountPath: /etc/users_database.yml
              subPath: users_database.yml
      volumes:
        - name: config
          configMap:
            name: values.yml
        - name: users-db
          configMap:
            name: users-database.yml
