Authelia/services.yml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
