Authelia/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    external-dns.alpha.kubernetes.io/hostname: authelia.starsys.fr
    cert-manager.io/cluster-issuer: "letsencrypt-prod	
spec:
  rules:
    - host: authelia.starsys.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
